--- a/api/CoreUnitTest.yml
+++ b/api/CoreUnitTest.yml
@@ -5,6 +5,7 @@ items:
   id: CoreUnitTest
   children:
   - CoreUnitTest.CoreUnitTest
+  - CoreUnitTest.TestCommand
   langs:
   - csharp
   - vb
@@ -15,6 +16,12 @@ items:
   assemblies:
   - CoreUnitTest
 references:
+- uid: CoreUnitTest.TestCommand
+  commentId: T:CoreUnitTest.TestCommand
+  href: CoreUnitTest.TestCommand.html
+  name: TestCommand
+  nameWithType: TestCommand
+  fullName: CoreUnitTest.TestCommand
 - uid: CoreUnitTest.CoreUnitTest
   commentId: T:CoreUnitTest.CoreUnitTest
   href: CoreUnitTest.CoreUnitTest.html
